gitops/documenso/base/db.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: db
  namespace: documenso
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-pvc
      containers:
        - name: postgres
          image: 'postgres:16-alpine'
          resources: {}
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      securityContext:
        runAsUser: 0
