gitops/documenso/base/documenso.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: documenso
  namespace: documenso
  labels:
    app.kubernetes.io/name: documenso
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: documenso
      app.kubernetes.io/name: documenso
  template:
    metadata:
      labels:
        app: documenso
        app.kubernetes.io/instance: documenso
        app.kubernetes.io/name: documenso
    spec:
      containers:
        - resources:
            requests:
              memory: 256Mi
          name: documenso
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          image: 'quay.io/neutron-it/documenso:latest'
      securityContext: {}
