gitops/documenso/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: documenso
  namespace: documenso
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: documenso
---
kind: Service
apiVersion: v1
metadata:
  name: db
  namespace: documenso
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: db
